# workshop_lv_docker

./: .gitignore  README.md  app.py  dockerfile  pyproject.toml
