[tool.poetry]
name = "workshop-lv-docker"
version = "0.1.0"
description = ""
authors = ["Diego Morais <dolivmorais@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.42.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
